--- a/index.html
+++ b/index.html
@@ -3,9 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Web Development portfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="stylesheet" href="styles/portfolio.css">
 </head>
 <body>
-    
+    <header>
+<nav>
+    <h3 class="nav-titel">Mar<span class="text-primary">r</span>y</h3>
+    <ui>
+        <li><a href="">Portfolio </a></li>
+        <li><a href="">Blog</a></li>
+        <li><button class="btn-primary">Hire me</button></li>
+    </ui>
+</nav>
+    </header>
+    <main>
+
+    </main>
+    <footer>
+
+    </footer>
 </body>
 </html>
