--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
     </ui>
 </nav>
 <div class="banner">
-    <div>
+    <div class="banner-contant">
         <h3 class="banner-gretting">Hi, I  am</h3>
         <h1 class="banner-heading">Mary Hardy</h1>
-        <p>Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
+        <p class="banner-discription">Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
         <button class="btn-primary">Download CV</button>
         <button class="btn-primary">Contact</button>
     </div>
@@ -29,7 +29,10 @@
 </div>
     </header>
     <main>
-
+<section class="about">
+        <h3 class="section-title">About Me</h3>
+        <p class="secttion-description">I, m a designer & developer with a passion for web design. I enjoy developing simple, clean and slick websites that provide real value to the end user. Thousands of clients have procured exceptional resulfs while working with me. Delivering work within time and budget which meets clients requirements in our mata.</p>
+</section>
     </main>
     <footer>
 
