--- a/index.html
+++ b/index.html
@@ -51,12 +51,41 @@
                 <h4 class="info-title">From:</h4>
                 <p class="info-description">Los Angeles, USA</p>
             </div>
-
-
-
-
-        
         </div>
+</section>
+<section>
+    <h3 class="section-title">What i do</h3>
+    <p id="what-i-don-description" class="secttion-description">I have more than 10 years experience building software for clients all over the world. Below is a quick overview of my main technical skill sets and technologies i use. Want to find out more about my experience? Check out my online resume and project portfolio.</p>
+    <div class="skill-contsiner">
+           <div class="skill">
+            <img src="images/icons/js.png" alt="">
+            <h3 class="skill-titel">Vanilla JavaScript</h3>
+            <p class="skill description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+           </div>
+           <div class="skill">
+             <img src="images/icons/react.png" alt="">
+             <h3 class="skill-titel">React</h3>
+             <p class="skill-description">React
+                List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+           </div>
+           <div class="skill">
+            <img src="images/icons/nodejs.png" alt="">
+            <h3 class="skill-titel">Node.js</h3>
+            <p class="skill-description">Node.js
+                List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+           </div>
+           <div class="skill">
+            <img src="images/icons/mongo.png" alt="">
+            <h3 class="skill-titel">MongoDB</h3>
+            <p class="skill-description">MongoDB
+                List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+           </div>
+    </div>
+    </head>
+    <body>
+        
+    </body>
+    </html></h3>
 </section>
     </main>
     <footer>
