resume section completed

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<htm lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -56,7 +56,7 @@
 <section>
     <h3 class="section-title">What i do</h3>
     <p id="what-i-don-description" class="secttion-description">I have more than 10 years experience building software for clients all over the world. Below is a quick overview of my main technical skill sets and technologies i use. Want to find out more about my experience? Check out my online resume and project portfolio.</p>
-    <div class="skill-contsiner">
+    <div class="skill-container">
            <div class="skill">
             <img src="images/icons/js.png" alt="">
             <h3 class="skill-titel">Vanilla JavaScript</h3>
@@ -81,11 +81,58 @@
                 List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
            </div>
     </div>
-    </head>
-    <body>
-        
-    </body>
-    </html></h3>
+</section>
+<section >
+    <h3 class="section-title"> A Summary of My Resume</h3>
+    <div class="resume-container">
+        <h3 class="resume-colom-titel">My Education</h3>
+        <div class="resume-item">
+            <h2 class="resume-item">Master in Computer Engineering</h2>
+            <h3 class="resume-item-institute">Harvard University / 2015 - 2017</h3>
+            <p class="resume-item-description">List skill/technologies here. You can change the icon above 
+                to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+        </div>
+        <hr>
+        <div class="resume-item">
+            <h2 class="resume-item">Master in Computer Engineering</h2>
+            <h3 class="resume-item-institute">Harvard University / 2015 - 2017</h3>
+            <p class="resume-item-description">List skill/technologies here. You can change the icon above 
+                to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+        </div>
+        <hr>
+        <div class="resume-item">
+            <h2 class="resume-item">Master in Computer Engineering</h2>
+            <h3 class="resume-item-institute">Harvard University / 2015 - 2017</h3>
+            <p class="resume-item-description">List skill/technologies here. You can change the icon above 
+                to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+        </div>
+    </div>
+    <div class="resume-container">
+        <h3>My Experience</h3>
+        <div class="experience">
+            <h2 class="working-place">Sr. Font End Developer</h2>
+            <h3 class="working-experiance">Apple Inc / 2020 - Current</h3>
+            <p class="achivement">List skill/technologies here. You can change the icon above 
+                to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+        </div>
+        <hr>
+        <div class="experience">
+            <h2 class="working-place">Jr. Font End Developer</h2>
+            <h3 class="working-experiance">Dribbble Inc / 2018 - 2022</h3>
+            <p class="achivement">List skill/technologies here. You can change the icon above 
+                to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+        </div>
+        <hr>
+        <div class="experience">
+            <h2 class="working-place">HTML Developer</h2>
+            <h3 class="working-experiance">Adobe Inc / 2017 - 2018</h3>
+            <p class="achivement">List skill/technologies here. You can change the icon above 
+                to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+        </div>
+    </div>
+    <div class="download-cv">
+        <button class="btn-primary">Download CV</button>
+    </div>
 </section>
     </main>
     <footer>
