--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Web Development portfolio</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="stylesheet" href="styles/portfolio.css">
+    <script src="https://kit.fontawesome.com/7aea7520b8.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <header class="header">
@@ -22,8 +23,8 @@
         <h3 class="banner-gretting">Hi, I  am</h3>
         <h1 class="banner-heading">Mary Hardy</h1>
         <p class="banner-discription">Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
-        <button class="btn-primary">Download CV</button>
-        <button class="btn-primary">Contact</button>
+        <button class="btn-primary"><i class="fa-solid fa-download"></i>Download CV</button>
+        <button class="btn-primary"><i class="fa-solid fa-phone"></i>Contact</button>
     </div>
     <img class="profile-pic" src="images/hardy.png" alt="" >
 </div>
@@ -131,12 +132,25 @@
         </div>
     </div>
     <div class="download-cv">
-        <button class="btn-primary">Download CV</button>
+        <button class="btn-primary"><i class="fa-solid fa-download"></i>Download CV</button>
     </div>
 </section>
     </main>
     <footer>
-
+<div class="footer-item">
+    <h3>Lets Connect</h3>
+    <p><h5>Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET, Monday through Friday.</h5></p>
+    <div class="social-links">
+        <a href=""><img src="images/icons/facebook.png" alt=""></a>
+        <a href=""><img src="images/icons/twitter.png" alt=""></a>
+        <a href=""><img src="images/icons/insta.png" alt=""></a>
+    </div>
+</div>
+<div class="footer-item"><h3>Let's Message me</h3></div>
     </footer>
 </body>
 </html>
+
+<!-- <img src="images/icons/facebook.png" alt="">
+    <img src="images/icons/twitter.png" alt="">
+    <img src="images/icons/insta.png" alt=""> -->
