--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
 </nav>
 <div class="banner">
     <div class="banner-contant">
-        <h3 class="banner-gretting">Hi, I  am</h3>
-        <h1 class="banner-heading">Mary Hardy</h1>
-        <p class="banner-discription">Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
+        <h2 class="banner-gretting">Hi, I  am</h2>
+        <h1 2class="banner-heading">Mary Hardy</h1>
+        <p class="banner-discription"><h6>Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</h6></p>
         <button class="btn-primary"><i class="fa-solid fa-download"></i>Download CV</button>
         <button class="btn-primary"><i class="fa-solid fa-phone"></i>Contact</button>
     </div>
@@ -56,7 +56,7 @@
 </section>
 <section>
     <h3 class="section-title">What i do</h3>
-    <p id="what-i-don-description" class="secttion-description">I have more than 10 years experience building software for clients all over the world. Below is a quick overview of my main technical skill sets and technologies i use. Want to find out more about my experience? Check out my online resume and project portfolio.</p>
+    <p id="what-i-do-description" class="secttion-description">I have more than 10 years experience building software for clients all over the world. Below is a quick overview of my main technical skill sets and technologies i use. Want to find out more about my experience? Check out my online resume and project portfolio.</p>
     <div class="skill-container">
            <div class="skill">
             <img src="images/icons/js.png" alt="">
